unpackaged/main/default/objects/InvoiceLine__c/InvoiceLine__c.object-meta.xml
<CustomObject>
    <label>Invoice Line</label>
    <nameField>
        <label>Invoice Line Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>