unpackaged/main/default/objects/InvoiceLine__c/fields/CreditNoteAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteAmount__c</fullName>
    <label>Credit Note Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>