unpackaged/main/default/objects/InvoiceLine__c/fields/CustomerRequest__c.field-meta.xml
<CustomField>
    <fullName>CustomerRequest__c</fullName>
    <label>Customer Request</label>
    <referenceTo>CustomerRequest__c</referenceTo>
    <relationshipLabel>Invoices Lines</relationshipLabel>
    <relationshipName>InvoicesLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>