unpackaged/main/default/objects/InvoiceLine__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>