unpackaged/main/default/objects/InvoiceLine__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Invoices Lines</relationshipLabel>
    <relationshipName>InvoicesLines</relationshipName>
    <type>Lookup</type>
</CustomField>