unpackaged/main/default/objects/InvoiceLine__c/fields/invoiceItemId__c.field-meta.xml
<CustomField>
    <fullName>invoiceItemId__c</fullName>
    <label>invoiceItemId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>