unpackaged/main/default/objects/InvoiceLine__c/fields/LoadName__c.field-meta.xml
<CustomField>
    <fullName>LoadName__c</fullName>
    <label>Load Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>