unpackaged/main/default/objects/InvoiceLine__c/fields/StructureLevel1__c.field-meta.xml
<CustomField>
    <fullName>StructureLevel1__c</fullName>
    <label>Structure Level 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StructureLevel1</valueSetName>
    </valueSet>
</CustomField>